--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -54,19 +54,39 @@
           "status": "success",
           "player": "koonogk",
           "point": 16.88
+        },
+        {
+          "promo_code": "BoAmVzWa",
+          "time": 1754112789527,
+          "time_limit": 1754199189527,
+          "status": "success",
+          "player": "manus9331",
+          "point": 22.88
         }
       ],
       "playersLock": [
         {
-          "player": "tata5511",
-          "timelock": 1754101487859,
-          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
-          "lockTime": 86400000
-        },
-        {
           "player": "aroon11",
           "timelock": 1754110360340,
           "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
+          "lockTime": 180000
+        },
+        {
+          "player": "goft22",
+          "timelock": 1754112784797,
+          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
+          "lockTime": 180000
+        },
+        {
+          "player": "koonogk",
+          "timelock": 1754112868989,
+          "lockMessage": "กรุณาอย่าทำซ้ำบ่อยเกินไป กรุณาลองใหม่ในอีก 2 นาที",
+          "lockTime": 180000
+        },
+        {
+          "player": "tong234",
+          "timelock": 1754112875410,
+          "lockMessage": "กรุณาอย่าทำซ้ำบ่อยเกินไป กรุณาลองใหม่ในอีก 2 นาที",
           "lockTime": 180000
         }
       ]
