--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,95 +1,13 @@
 {
   "apply_code_today": {
-    "date": "2025-08-02",
+    "date": "2025-08-03",
     "thai_789bet": {
       "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "eGOsJ9pW",
-          "time": 1754070045523,
-          "time_limit": 1754156445523,
-          "status": "success",
-          "player": "tata5511",
-          "point": 15.88
-        },
-        {
-          "promo_code": "3GmoSHEG",
-          "time": 1754101463418,
-          "time_limit": 1754187863418,
-          "status": "success",
-          "player": "tong234",
-          "point": 18.88
-        },
-        {
-          "promo_code": "CUWwSekP",
-          "time": 1754101468665,
-          "time_limit": 1754187868665,
-          "status": "success",
-          "player": "wat3366",
-          "point": 10.88
-        },
-        {
-          "promo_code": "dke26AZr",
-          "time": 1754101472407,
-          "time_limit": 1754187872407,
-          "status": "success",
-          "player": "poiy88",
-          "point": 13.88
-        },
-        {
-          "promo_code": "qXW0KOYT",
-          "time": 1754101476134,
-          "time_limit": 1754187876134,
-          "status": "success",
-          "player": "nus9331",
-          "point": 27.88
-        },
-        {
-          "promo_code": "g7inf2fD",
-          "time": 1754110368386,
-          "time_limit": 1754196768386,
-          "status": "success",
-          "player": "koonogk",
-          "point": 16.88
-        },
-        {
-          "promo_code": "BoAmVzWa",
-          "time": 1754112789527,
-          "time_limit": 1754199189527,
-          "status": "success",
-          "player": "manus9331",
-          "point": 22.88
-        }
-      ],
-      "playersLock": [
-        {
-          "player": "aroon11",
-          "timelock": 1754110360340,
-          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
-          "lockTime": 180000
-        },
-        {
-          "player": "goft22",
-          "timelock": 1754112784797,
-          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
-          "lockTime": 180000
-        },
-        {
-          "player": "koonogk",
-          "timelock": 1754112868989,
-          "lockMessage": "กรุณาอย่าทำซ้ำบ่อยเกินไป กรุณาลองใหม่ในอีก 2 นาที",
-          "lockTime": 180000
-        },
-        {
-          "player": "tong234",
-          "timelock": 1754112875410,
-          "lockMessage": "กรุณาอย่าทำซ้ำบ่อยเกินไป กรุณาลองใหม่ในอีก 2 นาที",
-          "lockTime": 180000
-        }
-      ]
+      "players": [],
+      "playersLock": []
     }
   }
 }
