save local changes

--- a/data/package.json
+++ b/data/package.json
@@ -112,6 +112,18 @@
         "package_logo": "/images/procodeAi.png"
       },
       {
+        "package_name": "แพ็กเกจประกันราคา 10 โค้ด (ประกันยอดโค้ดราคา 10 ไม่มีขาดทุน) โปร 8.8",
+        "package_badge":  ["hot", "sale","new"],
+        "package_icons": ["⭐", "🔥", "🆕", "💥"],
+        "package_desc": "ได้แน่นอน 10 โค้ด ประกันยอดยอดโค้ดราคา 10 บาทขึ้นไป ยอดรับประกันราคารวม 10 โค้ด 100 บาทขึ้นไป ไม่มีจำกัดเวลายิงให้จนครบ 10 โค้ดตามจำนวน",
+        "package_price": 100,
+        "package_sale": 88,
+        "package_pool_group": "high, mid",
+        "package_day_limit": 0,
+        "package_site_name": "thai_jun88k36",
+        "package_logo": "/images/procodeAi.png"
+      },
+      {
         "package_name": "แพ็กเกจประกันราคา 10 โค้ด (ประกันยอดโค้ดราคา 15 ไม่มีขาดทุน)",
         "package_badge":  ["hot", "sale","new"],
         "package_icons": ["⭐", "🔥", "🆕", "💥"],
