--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -30,6 +30,14 @@
           "status": "success",
           "player": "aroon11",
           "point": 21.88
+        },
+        {
+          "promo_code": "SV88Q9L",
+          "time": 1757089746469,
+          "time_limit": 1757176146469,
+          "status": "success",
+          "player": "noonj88",
+          "point": 17.88
         }
       ],
       "playersLock": []
