--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,42 +2,43 @@
   "apply_code_today": {
     "date": "2025-09-07",
     "thai_789bet": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "tqcbzlcwh",
+          "time": 1757211986354,
+          "time_limit": 1757298386354,
+          "status": "success",
+          "player": "areeroon",
+          "point": 17.88
+        },
+        {
+          "promo_code": "5zgh22i6k",
+          "time": 1757211998297,
+          "time_limit": 1757298398297,
+          "status": "success",
+          "player": "manus9331",
+          "point": 17.88
+        }
+      ],
       "playersLock": []
     },
     "thai_jun88k36": {
       "players": [
         {
-          "promo_code": "VJLPY39J",
-          "time": 1757190946288,
-          "time_limit": 1757277346288,
+          "promo_code": "00IDU10",
+          "time": 1757212121612,
+          "time_limit": 1757298521612,
           "status": "success",
-          "player": "manus9331",
-          "point": 23.88
+          "player": "aroon11",
+          "point": 27.88
         },
         {
-          "promo_code": "W52XYV0Q",
-          "time": 1757190951537,
-          "time_limit": 1757277351537,
+          "promo_code": "9KLQ7GL",
+          "time": 1757212270536,
+          "time_limit": 1757298670536,
           "status": "success",
-          "player": "boynirun",
-          "point": 17.88
-        },
-        {
-          "promo_code": "WEIDBMJ6",
-          "time": 1757190956821,
-          "time_limit": 1757277356821,
-          "status": "success",
-          "player": "koomoo",
-          "point": 17.88
-        },
-        {
-          "promo_code": "PQJBMSXO",
-          "time": 1757190963539,
-          "time_limit": 1757277363539,
-          "status": "success",
-          "player": "noonj88",
-          "point": 20.88
+          "player": "nus9331",
+          "point": 25.88
         }
       ],
       "playersLock": []
