--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -24,7 +24,29 @@
           "point": 27.88
         }        
       ],
-      "playersLock": []
+      "playersLock": [
+        {
+          "player": "boynirun",
+          "timelock": 1757400914365,
+          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
+          "lockTime": 86400000,
+          "lockCode": 403
+        },
+        {
+          "player": "noonj88",
+          "timelock": 1757400916238,
+          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
+          "lockTime": 86400000,
+          "lockCode": 403
+        },
+        {
+          "player": "koomoo",
+          "timelock": 1757400918091,
+          "lockMessage": "รหัสโปรโมชั่นของคุณได้รับรางวัลแล้ว กรุณากลับมาในครั้งถัดไปเพื่อรับรางวัล ขอให้โชคดี!",
+          "lockTime": 86400000,
+          "lockCode": 403
+        }
+      ]
     }
   }
 }
