--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,24 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "J4SV9LX",
+          "time": 1757557963108,
+          "time_limit": 1757644363108,
+          "status": "success",
+          "player": "aroon11",
+          "point": 24.88
+        },
+        {
+          "promo_code": "J4SV9LX",
+          "time": 1757557963108,
+          "time_limit": 1757644363108,
+          "status": "success",
+          "player": "nus9331",
+          "point": 17.88
+        }
+      ],
       "playersLock": []
     }
   }
