--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,30 +1,14 @@
 {
   "apply_code_today": {
-    "date": "2025-09-11",
+    "date": "2025-09-12",
     "thai_789bet": {
       "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "J4SV9LX",
-          "time": 1757557963108,
-          "time_limit": 1757644363108,
-          "status": "success",
-          "player": "aroon11",
-          "point": 24.88
-        },
-        {
-          "promo_code": "J4SV9LX",
-          "time": 1757557963108,
-          "time_limit": 1757644363108,
-          "status": "success",
-          "player": "nus9331",
-          "point": 17.88
-        }
-      ],
+      "players": [],
       "playersLock": []
+
     }
   }
 }
