--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,16 +2,7 @@
   "apply_code_today": {
     "date": "2025-09-14",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "FZ3OK8QIZ",
-          "time": 1757745075058,
-          "time_limit": 1757831475058,
-          "status": "success",
-          "player": "nus9331",
-          "point": 16.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
