--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,16 +6,7 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "s6Wzjj3mq",
-          "time": 1757783718675,
-          "time_limit": 1757870118675,
-          "status": "success",
-          "player": "nus9331",
-          "point": 17.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
