--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -34,6 +34,14 @@
           "status": "success",
           "player": "VIP0955171905",
           "point": 24.88
+        },
+        {
+          "promo_code": "sJl4JODq5yGDy",
+          "time": 1757795156192,
+          "time_limit": 1757881556192,
+          "status": "success",
+          "player": "poypy789",
+          "point": 24.88
         }
       ],
       "playersLock": []
