--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,24 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "l6Ein0oKX",
+          "time": 1758401367477,
+          "time_limit": 1758487767477,
+          "status": "success",
+          "player": "aroon11",
+          "point": 22.88
+        },
+        {
+          "promo_code": "RC6NohP2l",
+          "time": 1758401367477,
+          "time_limit": 1758487767477,
+          "status": "success",
+          "player": "manus9331",
+          "point": 22.88
+        }
+      ],
       "playersLock": []
     }
   }
