--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -8,7 +8,7 @@
           "time": 1758422254285,
           "time_limit": 1758508654285,
           "status": "success",
-          "player": "poypy789",
+          "player": "VIP0955171905",
           "point": 22.88
         }
       ],
