--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,17 +1,8 @@
 {
   "apply_code_today": {
-    "date": "2025-09-21",
+    "date": "2025-09-22",
     "thai_789bet": {
-      "players": [
-        {
-          "promo_code": "m3A7Euwc0WcaD",
-          "time": 1758422254285,
-          "time_limit": 1758508654285,
-          "status": "success",
-          "player": "VIP0955171905",
-          "point": 22.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
