--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -2,7 +2,16 @@
   "apply_code_today": {
     "date": "2025-09-28",
     "thai_789bet": {
-      "players": [],
+      "players": [        
+        {
+          "promo_code": "sx4f8aQ5Q",
+          "time": 1759029310983,
+          "time_limit": 1759115710983,
+          "status": "success",
+          "player": "nus9331",
+          "point": 21.88
+        }
+      ],
       "playersLock": []
     },
     "thai_jun88k36": {
