--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -3,7 +3,22 @@
     "date": "2025-09-28",
     "thai_789bet": {
       "players": [],
-      "playersLock": []
+      "playersLock": [
+        {
+          "player": "VIP0955171905",
+          "timelock": 1759033450879,
+          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
+          "lockTime": 1800000,
+          "lockCode": 9007
+        },
+        {
+          "player": "nus9331",
+          "timelock": 1759033450879,
+          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
+          "lockTime": 1800000,
+          "lockCode": 9007
+        }        
+      ]
     },
     "thai_jun88k36": {
       "players": [
