--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,53 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2025-09-28",
+    "date": "2025-09-29",
     "thai_789bet": {
       "players": [],
-      "playersLock": [
-        {
-          "player": "VIP0955171905",
-          "timelock": 1759033450879,
-          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
-          "lockTime": 1800000,
-          "lockCode": 9007
-        }
-      ]
+      "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "sx4f8aQ5Q",
-          "time": 1759029310983,
-          "time_limit": 1759115710983,
-          "status": "success",
-          "player": "manus9331",
-          "point": 21.88
-        },
-        {
-          "promo_code": "0fiObk257",
-          "time": 1759032686696,
-          "time_limit": 1759119086696,
-          "status": "success",
-          "player": "aroon11",
-          "point": 25.88
-        },
-        {
-          "promo_code": "WMt9scCEt",
-          "time": 1759032702403,
-          "time_limit": 1759119102403,
-          "status": "success",
-          "player": "frankk2709",
-          "point": 27.88
-        },
-        {
-          "promo_code": "wSyDO9QGM",
-          "time": 1759039186425,
-          "time_limit": 1759125586425,
-          "status": "success",
-          "player": "tour2540",
-          "point": 20.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
