--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -16,15 +16,7 @@
           "point": 20.88
         }
       ],
-      "playersLock": [
-        {
-          "player": "aroon11",
-          "timelock": 1759338372757,
-          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
-          "lockTime": 1800000,
-          "lockCode": 9007
-        }
-      ]
+      "playersLock": []
     }
   }
 }
