--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,16 +6,7 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "8OC6AUK",
-          "time": 1759424957307,
-          "time_limit": 1759511357307,
-          "status": "success",
-          "player": "bank0760",
-          "point": 21.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
