--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,32 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "iR6HKHu0X",
+          "time": 1759820937563,
+          "time_limit": 1759907337563,
+          "status": "success",
+          "player": "ary11",
+          "point": 27.88
+        },
+        {
+          "promo_code": "6jWot6VVI",
+          "time": 1759820937563,
+          "time_limit": 1759907337563,
+          "status": "success",
+          "player": "nus9331",
+          "point": 27.88
+        },
+        {
+          "promo_code": "WtmJv9Yt4",
+          "time": 1759820937563,
+          "time_limit": 1759907337563,
+          "status": "success",
+          "player": "aroon11",
+          "point": 27.88
+        }                
+      ],
       "playersLock": []
     }
   }
