--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -16,6 +16,14 @@
           "point": 27.88
         },
         {
+          "promo_code": "pJzw3Mqcx",
+          "time": 1759823959451,
+          "time_limit": 1759910359451,
+          "status": "success",
+          "player": "bank0760",
+          "point": 27.88
+        },
+        {
           "promo_code": "6jWot6VVI",
           "time": 1759820937563,
           "time_limit": 1759907337563,
@@ -30,7 +38,7 @@
           "status": "success",
           "player": "aroon11",
           "point": 27.88
-        }                
+        }        
       ],
       "playersLock": []
     }
