--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -4,7 +4,7 @@
     "thai_789bet": {
       "players": [
         {
-          "promo_code": "pJzw3Mqcx",
+          "promo_code": "ZYnL9Dv4wTq2F",
           "time": 1759823959451,
           "time_limit": 1759910359451,
           "status": "success",
