--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,8 +6,25 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
-      "playersLock": []
+      "players": [
+        {
+          "promo_code": "CsFcfIKcL",
+          "time": 1759894611244,
+          "time_limit": 1759981011244,
+          "status": "success",
+          "player": "aroon11",
+          "point": 22.88
+        }
+      ],
+      "playersLock": [
+        {
+          "player": "manus9331",
+          "timelock": 1759894616215,
+          "lockMessage": "รหัสนี้เป็นรหัสที่คุณเคยใช้รับรางวัลแล้ว กรุณาลองรหัสอื่นหรือกลับมาใหม่ในภายหลัง ขอให้โชคดี!",
+          "lockTime": 1800000,
+          "lockCode": 9007
+        }
+      ]
     }
   }
 }
