--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,21 +1,12 @@
 {
   "apply_code_today": {
-    "date": "2025-10-22",
+    "date": "2025-10-23",
     "thai_789bet": {
       "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [
-        {
-          "promo_code": "I0U91KP",
-          "time": 1761073292961,
-          "time_limit": 1761159692961,
-          "status": "success",
-          "player": "aroon11",
-          "point": 22.88
-        }
-      ],
+      "players": [],
       "playersLock": []
     }
   }
