--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -6,7 +6,24 @@
       "playersLock": []
     },
     "thai_jun88k36": {
-      "players": [],
+      "players": [
+        {
+          "promo_code": "I0U91KP",
+          "time": 1761073292961,
+          "time_limit": 1761159692961,
+          "status": "success",
+          "player": "aroon11",
+          "point": 22.88
+        },
+        {
+          "promo_code": "S5Z4XYR",
+          "time": 1761128024347,
+          "time_limit": 1761214424347,
+          "status": "success",
+          "player": "manus9331",
+          "point": 21.88
+        }
+      ],
       "playersLock": []
     }
   }
