--- a/data/apply_code.json
+++ b/data/apply_code.json
@@ -1,11 +1,15 @@
 {
   "apply_code_today": {
-    "date": "2025-10-31",
+    "date": "2025-10-30",
     "thai_789bet": {
       "players": [],
       "playersLock": []
     },
     "thai_jun88k36": {
+      "players": [],
+      "playersLock": []
+    },
+    "thai_168": {
       "players": [],
       "playersLock": []
     }
